--- a/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
+++ b/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
@@ -1,5 +1,5 @@
 {% extends 'TopxiaWebBundle::layout.html.twig' %}
-{% do script(['libs/ckeditor.js','libs/jquery-validation.js']) %}
+{% do script(['libs/ckeditor.js','libs/jquery-validation.js'], 500) %}
 
 {% block body %}
 
