--- a/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
+++ b/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-  <div class="tab-content">
+  <div class="tab-content" id="tab-content">
     <div class="tab-pane js-course-tasks-pane active js-step2-view">
       <ul class="es-step es-step-3 clearfix">
         <li>
