class-name-change

--- a/web/assets/v2/less/page/course-manage2.less
+++ b/web/assets/v2/less/page/course-manage2.less
@@ -1,7 +1,7 @@
-.course-tasks-modal {
-  .course-tasks-type {
+.task-manage-editor {
+  .task-manage-type-list {
     padding: 0;
-    .course-tasks-type-item {
+    .task-manage-type-item {
       >a {
         height: 150px;
         background-color: #f5f6f8;
@@ -34,12 +34,11 @@
       }
     }
   }
-  &.tab-content {
-    .tab-pane {
-      display: none;
-    }
-    .tab-pane.active {
-      display: block;
-    }
-  }
 }
+
+.task-manage-content-iframe {
+  min-height: 300px;
+  width: 100%;
+  border: none;
+}
+
