--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -13,16 +13,15 @@
 {% endblock %}
 
 {% block body %}
-  <div class="course-tasks-modal" id="task-editor" data-editor-mode="{{ mode }}"
-      {% if mode == 'edit' %}
-        data-editor-type="{{ currentType }}"
-        data-editor-step2-url="{{ path('course_manage_task_fields', {courseId: course.id, mode: 'edit', id: task.id}) }}"
-        data-save-url="{{ path('course_manage_task_update', {courseId: course.id, id: task.id }) }}"
-      {% elseif mode == 'create' %}
-        data-save-url="{{ path('course_manage_task_create', {courseId: course.id}) }}"
-      {% endif %}
-  >
-    <div id="task-type">
+  <div class="task-manage-editor" id="task-manage-editor" data-editor-mode="{{ mode }}"
+    {% if mode == 'edit' %}
+      data-editor-type="{{ currentType }}"
+      data-editor-step2-url="{{ path('course_manage_task_fields', {courseId: course.id, mode: 'edit', id: task.id}) }}"
+      data-save-url="{{ path('course_manage_task_update', {courseId: course.id, id: task.id }) }}"
+    {% elseif mode == 'create' %}
+      data-save-url="{{ path('course_manage_task_create', {courseId: course.id}) }}"
+    {% endif %}>
+    <div id="task-manage-type">
       <ul class="es-step es-step-3 clearfix">
         <li class="doing">
           <span class="number">1</span>
@@ -37,10 +36,10 @@
           设置完成条件
         </li>
       </ul>
-      <ul class="course-tasks-type row">
+      <ul class="task-manage-type-list row">
         {% if types is defined %}
           {% for type, value in types %}
-            <li class="col-xs-3 course-tasks-type-item js-course-tasks-item">
+            <li class="col-xs-3 task-manage-type-item js-course-tasks-item">
               <a data-role="activityType" data-type="{{ type }}" href="javascript:;"
                  data-content-url="{{ path('course_manage_task_fields',{courseId:course.id, mode: 'create', type: type}) }}">
                 <i class="{{ value.metas.icon }}"></i>
@@ -51,10 +50,7 @@
         {% endif %}
       </ul>
     </div>
-  
-    <div id="task-content">
-        
-      </div>
+    <div id="task-manage-content"></div>
     <input class="js-hidden-data" type="hidden" name="fromCourseSetId" value='1'>
     <input class="js-hidden-data" type="hidden" name="fromCourseId" value='{{ course.id }}'>
   </div>
