--- a/src/WebBundle/Resources/views/TextActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/TextActivity/modal.html.twig
@@ -3,17 +3,17 @@
 
 {% block activity_content %}
   <div class="row form-group">
-    <div class="col-md-2 control-label">
+    <div class="col-xs-2 control-label">
       <label for="title">{{ '标题'|trans }}</label>
     </div>
-    <div class="col-md-9 controls">
+    <div class="col-xs-9 controls">
       <input id="title" class="form-control" type="text" name="title" value={{ activity.title|default('') }} ></div>
   </div>
   <div class="row form-group">
-    <div class="col-md-2 control-label">
+    <div class="col-xs-2 control-label">
       <label for="text-content-field" class="style1">{{ '内容'|trans }}</label>
     </div>
-    <div class="col-md-9 controls">
+    <div class="col-xs-9 controls">
       <textarea class="form-control" id="text-content-field" name="content"data-image-upload-url="{{ path('editor_upload', {token:upload_token('course')}) }}" data-flash-upload-url="{{ path('editor_upload', {token:upload_token('course', 'flash')}) }}" data-image-download-url="{{ path('editor_download', {token:upload_token('course')}) }}"
     >{{ activity.content|default('') }}</textarea>
     </div>
@@ -23,10 +23,10 @@
 
 {% block activity_finish %}
   <div class="row form-group">
-    <div class="col-md-2 control-label">
+    <div class="col-xs-2 control-label">
       <label for="condition">{{ '完成条件'|trans }}</label>
     </div>
-    <div class="col-md-9 controls">
+    <div class="col-xs-9 controls">
       <input id="condition" class="form-control" type="text" name="condition" value={{ activity.title|default('') }}></div>
   </div>
 {% endblock %}
