--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -58,6 +58,5 @@
 {% block footer %}
   <button id="course-tasks-prev" type="submit" class="btn btn-primary" disabled>{{ '上一步'|trans }}</button>
   <button id="course-tasks-next" type="submit" class="btn btn-primary">{{ '下一步'|trans }}</button>
-  <button id="course-tasks-submit" type="submit" class="btn btn-primary"
-          data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
+  <button id="course-tasks-submit" type="submit" class="btn btn-primary" disabled data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
 {% endblock %}
