--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -21,7 +21,7 @@
     {% elseif mode == 'create' %}
       data-save-url="{{ path('course_manage_task_create', {courseId: course.id}) }}"
     {% endif %}>
-    <div id="task-manage-type">
+    <div id="task-manage-type" class="{% if mode == 'edit' %}hidden {% endif %}">
       <ul class="es-step es-step-3 clearfix">
         <li class="doing">
           <span class="number">1</span>
