add common less

--- a/src/WebBundle/Resources/assets/less/main.less
+++ b/src/WebBundle/Resources/assets/less/main.less
@@ -1,3 +1,2 @@
-// body {
-//   background-color: red;
-// }
+@import '../../../../../app/Resources/assets/libs/less/common.less';
+@import './task-manage/task-manage.less';
