--- a/app/Resources/assets/libs/less/common.less
+++ b/app/Resources/assets/libs/less/common.less
@@ -1,265 +1,123 @@
-.noborder {
-  border: none !important;
+//此处为通用变量，用于各个bundle的饮用，只具有方法，不生成样式；
+
+@img-src: "../img/";
+
+@gray-base:             #000;
+@gray-darker:           #313131;
+@gray-dark:             #616161;
+@gray:                  #919191;
+@gray-medium:           #c1c1c1;
+@gray-light:            #e1e1e1;
+@gray-lighter:          #f5f5f5;
+@bg-color:              #fafafa;
+@bg-new-color:          #f5f8fa;
+@border-color:          #e4ecf3;
+
+@brand-primary:         #46c37b;
+@brand-success:         #70d445;
+@brand-info:            #2db7f5;
+@brand-warning:         #ff8a0c;
+@brand-danger:          #e83d2c;
+
+
+/* =========================== media =========================== */
+
+@screen-xs-min:              480px;
+@screen-sm-min:              768px;
+@screen-md-min:              992px;
+@screen-lg-min:              1200px;
+
+@screen-xs-max:              (@screen-sm-min - 1);
+@screen-sm-max:              (@screen-md-min - 1);
+@screen-md-max:              (@screen-lg-min - 1);
+
+// 字符串截取 推荐用text-overflow
+.text-overflow() {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
 }
 
-.topborder {
-  border-bottom: none;
-  border-left: none;
-  border-right: none
+// 透明度兼容
+.opacity(@opacity) {
+  opacity: @opacity;
+  // IE8 filter
+  @opacity-ie: (@opacity * 100);
+  filter: ~"alpha(opacity=@{opacity-ie})";
 }
 
-.bottomborder {
-  border-left: none;
-  border-right: none;
-  border-top: none
+// 图片响应式
+.img-responsive(@display: block) {
+  display: @display;
+  max-width: 100%;
+  height: auto;
 }
 
-.dashedborder {
-  border-style: dashed
+.img-full(@display: block) {
+  display: @display;
+  height: auto;
+  width: 100%;
 }
 
-.tal {
-  text-liagn: left;
+// css3样式简写
+.es-transform(@x:1.1 , @y:1.1) {
+  -webkit-transform: scale(@x, @y);
+     -moz-transform: scale(@x, @y);
+      -ms-transform: scale(@x, @y);
+       -o-transform: scale(@x, @y);
+          transform: scale(@x, @y);
 }
 
-.tac {
-  text-align: center;
+.es-transition(@property:all,@time:.3s) {
+  -webkit-transition: @property @time ease;
+     -moz-transition: @property @time ease;
+       -o-transition: @property @time ease;
+          transition: @property @time ease;
 }
 
-.tar {
-  text-align: right;
+.box-shadow(@box-shadow:none) {
+  -webkit-box-shadow: @box-shadow;
+     -moz-box-shadow: @box-shadow;
+          box-shadow: @box-shadow;
 }
 
-.pas {
-  padding: 5px
+.es-box-shadow {
+  -webkit-box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
+     -moz-box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
+          box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
 }
 
-.pam {
-  padding: 10px
+.border-radius(@border-radius:4px) {
+  -webkit-border-radius: @border-radius;
+     -moz-border-radius: @border-radius;
+          border-radius: @border-radius;
 }
 
-.pal {
-  padding: 20px
+.border-top-left-radius(@border-radius:4px) {
+  border-top-left-radius: @border-radius;
+}
+.border-top-right-radius(@border-radius:4px) {
+  border-top-right-radius: @border-radius;
+}
+.border-bottom-left-radius(@border-radius:4px) {
+  border-bottom-left-radius: @border-radius;
+}
+.border-bottom-right-radius(@border-radius:4px) {
+  border-bottom-right-radius: @border-radius;
 }
 
-.pts {
-  padding-top: 5px
+.animation(@animation) {
+  -webkit-animation: @animation;
+     -moz-animation: @animation;
+       -o-animation: @animation;
+          animation: @animation;
 }
 
-.ptm {
-  padding-top: 10px
-}
-
-.ptl {
-  padding-top: 20px
-}
-
-.prs {
-  padding-right: 5px
-}
-
-.prm {
-  padding-right: 10px
-}
-
-.prl {
-  padding-right: 20px
-}
-
-.pbs {
-  padding-bottom: 5px
-}
-
-.pbm {
-  padding-bottom: 10px
-}
-
-.pbl {
-  padding-bottom: 20px
-}
-
-.pls {
-  padding-left: 5px
-}
-
-.plm {
-  padding-left: 10px
-}
-
-.pll {
-  padding-left: 20px
-}
-
-.phs {
-  padding-left: 5px;
-  padding-right: 5px
-}
-
-.phm {
-  padding-left: 10px;
-  padding-right: 10px
-}
-
-.phl {
-  padding-left: 20px;
-  padding-right: 20px
-}
-
-.pvs {
-  padding-top: 5px;
-  padding-bottom: 5px
-}
-
-.pvm {
-  padding-top: 10px;
-  padding-bottom: 10px
-}
-
-.pvl {
-  padding-top: 20px;
-  padding-bottom: 20px
-}
-
-.nopt {
-  padding-top: 0px;
-}
-
-.nopb {
-  padding-bottom: 0px;
-}
-
-.mas {
-  margin: 5px
-}
-
-.mam {
-  margin: 10px
-}
-
-.mal {
-  margin: 20px
-}
-
-.mts {
-  margin-top: 5px
-}
-
-.mtm {
-  margin-top: 10px
-}
-
-.mtl {
-  margin-top: 20px
-}
-
-.mrs {
-  margin-right: 5px
-}
-
-.mrm {
-  margin-right: 10px
-}
-
-.mrl {
-  margin-right: 20px
-}
-
-.mbs {
-  margin-bottom: 5px
-}
-
-.mbm {
-  margin-bottom: 10px
-}
-
-.mbl {
-  margin-bottom: 20px
-}
-
-.mbxl {
-  margin-bottom: 40px
-}
-
-.mbxxl {
-  margin-bottom: 60px
-}
-
-.mls {
-  margin-left: 5px
-}
-
-.mlm {
-  margin-left: 10px
-}
-
-.mll {
-  margin-left: 20px
-}
-
-.mhs {
-  margin-left: 5px;
-  margin-right: 5px
-}
-
-.mhm {
-  margin-left: 10px;
-  margin-right: 10px
-}
-
-.mhl {
-  margin-left: 20px;
-  margin-right: 20px
-}
-
-.mvs {
-  margin-top: 5px;
-  margin-bottom: 5px
-}
-
-.mvm {
-  margin-top: 10px;
-  margin-bottom: 10px
-}
-
-.mvl {
-  margin-top: 20px;
-  margin-bottom: 20px
-}
-
-.mno {
-  margin: 0px !important;
-}
-
-.fss {
-  font-size: 10px;
-}
-
-.fsn {
-  font-size: 12px
-}
-
-.fsm {
-  font-size: 14px
-}
-
-.fsl {
-  font-size: 16px
-}
-
-fieldset {
-  border-top: 1px solid #e6e6e6;
-  margin-bottom: 20px;
-  legend {
-    margin: 15px auto;
-    width: auto;
-    text-align: center;
-    font-size: 16px;
-    color: #616161;
-    background-color: #fff;
-    border: 0;
-  }
-  .block-margin {
-    width: 100%;
-    height: 20px;
-  }
+.transform(@transform) {
+  -webkit-transform: @transform;
+     -moz-transform: @transform;
+       -o-transform: @transform;
+          transform: @transform;
 }
