--- a/app/Resources/assets/libs/vendor.less
+++ b/app/Resources/assets/libs/vendor.less
@@ -2,5 +2,6 @@
 @import '~nodeModulesDir/bootstrap/dist/css/bootstrap.css';
 @import '~nodeModulesDir/font-awesome/css/font-awesome.css';
 
-@import './less/bootstrap-extends.less';
-@import './less/common.less';
+//此处应该是通用的css如（bootstrap.css,通用的间距样式等等），只提供样式不提供方法;
+
+
