--- a/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
@@ -10,39 +10,22 @@
     <p>{{ '总数'|trans }}: {{ totalRegisterNum }}</p>
   </li>
   <li>
-    <div class="title">{{ '课程新增学员'|trans }}</div>
-    <span class="number"> 今日<span> {{ todayCourseMemberNum }} </span></span>
-    <p>{{ '总人次'|trans }}: {{ totalCourseMemberNum }}</p>
+    <div class="title">{{ '新增学员'|trans }}</div>
+    <span class="number"> 今日<span> {{ todayCourseMemberNum +todayClassroomMemberNum }} </span></span>
+    <p>{{ '总人次'|trans }}: {{ totalCourseMemberNum +totalClassroomMemberNum }}</p>
   </li>
-  <li>
-    <div class="title">{{ '班级新增学员'|trans }}</div>
-    <span class="number">今日<span> {{ todayClassroomMemberNum }}</span> </span>
-    <p>{{ '总人次'|trans }}: {{ totalClassroomMemberNum }}</p>
-  </li>
-  <li>
-    <div class="title">{{ '新增会员'|trans }}</div>
-    <span class="number"> 今日<span>{{ todayVipNum }} </span></span>
-    <p>{{ '总数'|trans }}: {{ totalVipNum }}</p>
-  </li>
+  {% if is_plugin_installed('Vip') and setting('vip.enabled') %}
+    <li>
+      <div class="title">{{ '新增会员'|trans }}</div>
+      <span class="number"> 今日<span>{{ todayVipNum }} </span></span>
+      <p>{{ '总数'|trans }}: {{ totalVipNum }}</p>
+    </li>
+  {% endif %}
   <li>
     <div class="title">{{ '回答未回复'|trans }}</div>
     <span class="number">今日<span>
       {{ todayThreadNum }}/{{ todayThreadUnAnswerNum }}
    </span></span>
     <p>{{ '总数'|trans }}: {{ totalThreadNum }}</p>
-  </li>
-  <li>
-    <div class="title">{{ '课程'|trans }}</div>
-    <span class="number">已发布<span>
-      {{ publishedCourseNum }}
-   </span></span>
-    <p>{{ '总数'|trans }}: {{ totalCourseNum }}</p>
-  </li>
-  <li>
-    <div class="title">{{ '班级'|trans }}</div>
-    <span class="number">已发布<span>
-      {{ publishedClassroomNum }}
-   </span></span>
-    <p>{{ '总数'|trans }}: {{ totalClassroomNum }}</p>
   </li>
 </ul>
