--- a/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
@@ -1,31 +1,37 @@
-<ul class="subfield-list eight-subfield clearfix">
+<ul class="subfield-list 
+  {% if is_plugin_installed('Vip') and setting('vip.enabled') %}
+    five-subfield 
+  {% else %}
+    four-subfield
+  {% endif %}
+  clearfix">
   <li>
-    <div class="title">{{ '在线用户'|trans }}</div>
-    <span class="number"> 登录 <span>{{ loginCount| default('0') }}</span> </span>
-    <p>{{ '总数'|trans }}: {{ onlineCount }}</p>
+    <div class="title">{{ '登录用户'|trans }}</div>
+    <span class="number">{{ loginCount| default('0') }}</span>
+    <p>{{ '在线总数'|trans }}: {{ onlineCount }}</p>
   </li>
   <li>
     <div class="title">{{ '新增注册'|trans }}</div>
-    <span class="number">今日<span> {{ todayRegisterNum }}</span> </span>
+    <span class="number">{{ todayRegisterNum }}</span>
     <p>{{ '总数'|trans }}: {{ totalRegisterNum }}</p>
   </li>
   <li>
     <div class="title">{{ '新增学员'|trans }}</div>
-    <span class="number"> 今日<span> {{ todayCourseMemberNum +todayClassroomMemberNum }} </span></span>
-    <p>{{ '总人次'|trans }}: {{ totalCourseMemberNum +totalClassroomMemberNum }}</p>
+    <span class="number"> {{ todayCourseMemberNum + todayClassroomMemberNum }}</span>
+    <p>{{ '总人次'|trans }}: {{ totalCourseMemberNum + totalClassroomMemberNum }}</p>
   </li>
   {% if is_plugin_installed('Vip') and setting('vip.enabled') %}
     <li>
       <div class="title">{{ '新增会员'|trans }}</div>
-      <span class="number"> 今日<span>{{ todayVipNum }} </span></span>
+      <span class="number">{{ todayVipNum }}</span>
       <p>{{ '总数'|trans }}: {{ totalVipNum }}</p>
     </li>
   {% endif %}
   <li>
     <div class="title">{{ '回答未回复'|trans }}</div>
-    <span class="number">今日<span>
+    <span class="number">
       {{ todayThreadNum }}/{{ todayThreadUnAnswerNum }}
-   </span></span>
+    </span>
     <p>{{ '总数'|trans }}: {{ totalThreadNum }}</p>
   </li>
 </ul>
