--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -6,208 +6,208 @@
   {# 域名检查提示#}
   {{ render(controller('TopxiaAdminBundle:Default:validateDomain')) }}
 
-    <div class="row">
-      {% if not (setting('copyright.thirdCopyright')|default(0) == 1) %}
-        {{ render(controller('TopxiaAdminBundle:Default:getCloudNotices')) }}
-      {% endif %}
+  <div class="row">
+    {% if not (setting('copyright.thirdCopyright')|default(0) == 1) %}
+      {{ render(controller('TopxiaAdminBundle:Default:getCloudNotices')) }}
+    {% endif %}
 
-      {% if setting('copyright.thirdCopyright')|default(null) != 1 %}
-        <div class="col-md-6">
-          <div class="panel panel-default panel-150">
-            <div class="panel-heading">
-              <h3 class="panel-title">{{ '系统状态'|trans }}</h3>
-            </div>
-            <div class="panel-body" id="system-status" data-url="{{ path('admin_system_status') }}">
-              <div class="empty">{{ '正在载入数据，请稍等。'|trans }}</div>
-            </div>
-          </div>
-        </div>
-      {% endif %}
-    </div>
-
-    <div class="panel panel-default">
-      <div class="panel-heading clearfix">
-        <h3 class="panel-title">
-          {{ '网站概览'|trans }}
-        </h3>
-      </div>
-      <div class="panel-body" id="site-overview-table" data-url="{{ path('admin_operation_analysis') }}">
-        <div class="empty">{{ '正在载入数据，请稍等。'|trans }}</div>
-      </div>
-    </div>
-
-    <div class="panel panel-default panel-380">
-      <div class="panel-heading">
-        <div class="pull-right">
-          <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}</span>
-          <div class="btn-group btn-group-xs">
-            <button type="button" class="btn btn-primary js-user-switch-button"
-                    data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
-                    data-url="{{ path('admin_user_statistic', {period: 'week'}) }}">最近7天
-            </button>
-            <button type="button" class="btn btn-default js-user-switch-button"
-                    data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
-                    data-url="{{ path('admin_user_statistic', {period: 'month'}) }}">最近30天
-            </button>
-          </div>
-        </div>
-        <h3 class="panel-title">{{ '用户统计'|trans }}
-          <span class="glyphicon glyphicon-question-sign text-sm"
-                data-toggle="tooltip" data-placement="top"
-                title="{{ '活跃用户数：在30天内登录过系统的用户即为活跃用户; <br/>流失用户数：在30天内没有登录过系统的注册用户即为流失用户'|trans }}"></span>
-        </h3>
-      </div>
-      <div class="panel-body js-statistic-areas" id="user-statistic"
-           data-url="{{ path('admin_user_statistic', {period: 'week'}) }}" style="height:320px;">
-        <div class="empty">{{ '正在载入数据，请稍等。'|trans }}</div>
-      </div>
-    </div>
-
-    <div class="row">
+    {% if setting('copyright.thirdCopyright')|default(null) != 1 %}
       <div class="col-md-6">
-        <div class="panel panel-default panel-380">
+        <div class="panel panel-default panel-150">
           <div class="panel-heading">
-            <div class="pull-right">
-              <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }} </span>
-              <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary js-study-switch-button"
-                        data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
-                        data-url="{{ path('admin_study_statistic', {period: 'week'}) }}">最近7天
-                </button>
-                <button type="button" class="btn btn-default js-study-switch-button"
-                        data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
-                        data-url="{{ path('admin_study_statistic', {period: 'month'}) }}">最近30天
-                </button>
-              </div>
-            </div>
-            <h3 class="panel-title">{{ '订单统计'|trans }}</h3>
+            <h3 class="panel-title">{{ '系统状态'|trans }}</h3>
           </div>
-          <div class="panel-body js-statistic-areas" id="study-count-statistic"
-               data-url="{{ path('admin_study_statistic', {period: 'week'}) }}" style="height:320px;">
-
+          <div class="panel-body" id="system-status" data-url="{{ path('admin_system_status') }}">
+            <div class="empty">{{ '正在载入数据，请稍等。'|trans }}</div>
           </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="panel panel-default panel-380">
-          <div class="panel-heading">
-            <div class="pull-right">
-              <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }} </span>
-              <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary js-order-switch-button"
-                        data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
-                        data-url="{{ path('admin_order_statistic', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
-                <button type="button" class="btn btn-default js-order-switch-button"
-                        data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
-                        data-url="{{ path('admin_order_statistic',{period: 'month'}) }}">{{ '最近30天'|trans }}</button>
-              </div>
-            </div>
-            <h3 class="panel-title">{{ '付费订单统计'|trans }}</h3>
-          </div>
-          <div class="panel-body js-statistic-areas" id="pay-order-statistic"
-               data-url="{{ path('admin_order_statistic', {period: 'week'}) }}" style="height:320px;">
+    {% endif %}
+  </div>
 
+  <div class="panel panel-default">
+    <div class="panel-heading clearfix">
+      <h3 class="panel-title">
+        {{ '网站概览'|trans }}
+      </h3>
+    </div>
+    <div class="panel-body" id="site-overview-table" data-url="{{ path('admin_operation_analysis') }}">
+      <div class="empty">{{ '正在载入数据，请稍等。'|trans }}</div>
+    </div>
+  </div>
+
+  <div class="panel panel-default panel-380">
+    <div class="panel-heading">
+      <div class="pull-right">
+        <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}</span>
+        <div class="btn-group btn-group-xs">
+          <button type="button" class="btn btn-primary js-user-switch-button"
+                  data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
+                  data-url="{{ path('admin_user_statistic', {period: 'week'}) }}">最近7天
+          </button>
+          <button type="button" class="btn btn-default js-user-switch-button"
+                  data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
+                  data-url="{{ path('admin_user_statistic', {period: 'month'}) }}">最近30天
+          </button>
+        </div>
+      </div>
+      <h3 class="panel-title">{{ '用户统计'|trans }}
+        <span class="glyphicon glyphicon-question-sign text-sm"
+              data-toggle="tooltip" data-placement="top"
+              title="{{ '活跃用户数：在30天内登录过系统的用户即为活跃用户; <br/>流失用户数：在30天内没有登录过系统的注册用户即为流失用户'|trans }}"></span>
+      </h3>
+    </div>
+    <div class="panel-body js-statistic-areas" id="user-statistic"
+         data-url="{{ path('admin_user_statistic', {period: 'week'}) }}" style="height:320px;">
+      <div class="empty">{{ '正在载入数据，请稍等。'|trans }}</div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="panel panel-default panel-380">
+        <div class="panel-heading">
+          <div class="pull-right">
+            <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }} </span>
+            <div class="btn-group btn-group-xs">
+              <button type="button" class="btn btn-primary js-study-switch-button"
+                      data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
+                      data-url="{{ path('admin_study_statistic', {period: 'week'}) }}">最近7天
+              </button>
+              <button type="button" class="btn btn-default js-study-switch-button"
+                      data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
+                      data-url="{{ path('admin_study_statistic', {period: 'month'}) }}">最近30天
+              </button>
+            </div>
           </div>
+          <h3 class="panel-title">{{ '订单统计'|trans }}</h3>
+        </div>
+        <div class="panel-body js-statistic-areas" id="study-count-statistic"
+             data-url="{{ path('admin_study_statistic', {period: 'week'}) }}" style="height:320px;">
+
         </div>
       </div>
     </div>
-
-    <div class="row">
-      <div class="col-md-8">
-        <div class="panel panel-default panel-420">
-          <div class="panel-heading">
-            <div class="pull-right">
-              <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }} </span>
-              <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary js-lesson-switch-button"
-                        data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
-                        data-url="{{ path('admin_lesson_learn_statistic', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
-                <button type="button" class="btn btn-default js-lesson-switch-button"
-                        data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
-                        data-url="{{ path('admin_lesson_learn_statistic', {period: 'month'}) }}">{{ '最近30天'|trans }}</button>
-              </div>
+    <div class="col-md-6">
+      <div class="panel panel-default panel-380">
+        <div class="panel-heading">
+          <div class="pull-right">
+            <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }} </span>
+            <div class="btn-group btn-group-xs">
+              <button type="button" class="btn btn-primary js-order-switch-button"
+                      data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
+                      data-url="{{ path('admin_order_statistic', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
+              <button type="button" class="btn btn-default js-order-switch-button"
+                      data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
+                      data-url="{{ path('admin_order_statistic',{period: 'month'}) }}">{{ '最近30天'|trans }}</button>
             </div>
-            <h3 class="panel-title">{{ '课时完成数'|trans }}
-              <span class="glyphicon glyphicon-question-sign text-sm"
-                    data-toggle="tooltip" data-placement="top"
-                    title="{{ '每天课时学习的完成数量'|trans }}"></span></h3>
           </div>
-          <div class="panel-body js-statistic-areas" id="study-lesson-count-statistic"
-               data-url="{{ path('admin_lesson_learn_statistic', {period: 'week'}) }}" style="height:360px;">
-
-          </div>
+          <h3 class="panel-title">{{ '付费订单统计'|trans }}</h3>
         </div>
-      </div>
-      <div class="col-md-4">
-        <div class="panel panel-default panel-420">
-          <div class="panel-heading">
-            <div class="pull-right">
-              <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary js-course-switch-button"
-                        data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
-                        data-url="{{ path('admin_course_explore', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
-                <button type="button" class="btn btn-default  js-course-switch-button"
-                        data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
-                        data-url="{{ path('admin_course_explore', {period: 'month'}) }}">{{ '最近30天'|trans }}</button>
-              </div>
-            </div>
-            <h3 class="panel-title">{{ '课程排行榜'|trans }}</h3>
-          </div>
-          <div class="panel-body js-statistic-areas" id="course-explore-list"
-               data-url="{{ path('admin_course_explore', {period: 'week'}) }}">
+        <div class="panel-body js-statistic-areas" id="pay-order-statistic"
+             data-url="{{ path('admin_order_statistic', {period: 'week'}) }}" style="height:320px;">
 
-          </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="col-md-4">
-
-        <div class="panel panel-default panel-420 js-course-question-list">
-          <div class="panel-heading">
-            <a class="pull-right" href="{{ url('admin_question', {postStatus: 'unPosted'}) }}"
-            >{{ '更多'|trans }}</a>
-            <h3 class="panel-title">{{ '最新问答'|trans }}</h3>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="panel panel-default panel-420">
+        <div class="panel-heading">
+          <div class="pull-right">
+            <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }} </span>
+            <div class="btn-group btn-group-xs">
+              <button type="button" class="btn btn-primary js-lesson-switch-button"
+                      data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
+                      data-url="{{ path('admin_lesson_learn_statistic', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
+              <button type="button" class="btn btn-default js-lesson-switch-button"
+                      data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
+                      data-url="{{ path('admin_lesson_learn_statistic', {period: 'month'}) }}">{{ '最近30天'|trans }}</button>
+            </div>
           </div>
-          <div class="panel-body">
-            {{ render(controller('TopxiaAdminBundle:Default:unsolvedQuestionsBlock')) }}
-          </div>
+          <h3 class="panel-title">{{ '课时完成数'|trans }}
+            <span class="glyphicon glyphicon-question-sign text-sm"
+                  data-toggle="tooltip" data-placement="top"
+                  title="{{ '每天课时学习的完成数量'|trans }}"></span></h3>
         </div>
+        <div class="panel-body js-statistic-areas" id="study-lesson-count-statistic"
+             data-url="{{ path('admin_lesson_learn_statistic', {period: 'week'}) }}" style="height:360px;">
 
-      </div>
-      <div class="col-md-4">
-        <div class="panel panel-default panel-420">
-          <div class="panel-heading">
-            <a href="{{ path('admin_review') }}" class="pull-right">{{ '更多'|trans }}</a>
-            <h3 class="panel-title">
-              {{ '最新评价'|trans }}
-            </h3>
-          </div>
-          <div class="panel-body">
-            {{ render(controller('TopxiaAdminBundle:Default:courseReview')) }}
-          </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="panel panel-default search-panel panel-420">
-          <div class="panel-heading">
-            <a href="" class="pull-right">{{ '更多'|trans }}</a>
-            <h3 class="panel-title">
-              {{ '热门搜索'|trans }}
-              <small>{{ '最近7天'|trans }}</small>
-            </h3>
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-default panel-420">
+        <div class="panel-heading">
+          <div class="pull-right">
+            <div class="btn-group btn-group-xs">
+              <button type="button" class="btn btn-primary js-course-switch-button"
+                      data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
+                      data-url="{{ path('admin_course_explore', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
+              <button type="button" class="btn btn-default  js-course-switch-button"
+                      data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
+                      data-url="{{ path('admin_course_explore', {period: 'month'}) }}">{{ '最近30天'|trans }}</button>
+            </div>
           </div>
-          <div class="panel-body">
+          <h3 class="panel-title">{{ '课程排行榜'|trans }}</h3>
+        </div>
+        <div class="panel-body js-statistic-areas" id="course-explore-list"
+             data-url="{{ path('admin_course_explore', {period: 'week'}) }}">
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+
+      <div class="panel panel-default panel-420 js-course-question-list">
+        <div class="panel-heading">
+          <a class="pull-right" href="{{ url('admin_question', {postStatus: 'unPosted'}) }}"
+          >{{ '更多'|trans }}</a>
+          <h3 class="panel-title">{{ '最新问答'|trans }}</h3>
+        </div>
+        <div class="panel-body">
+          {{ render(controller('TopxiaAdminBundle:Default:unsolvedQuestionsBlock')) }}
+        </div>
+      </div>
+
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-default panel-420">
+        <div class="panel-heading">
+          <a href="{{ path('admin_review') }}" class="pull-right">{{ '更多'|trans }}</a>
+          <h3 class="panel-title">
+            {{ '最新评价'|trans }}
+          </h3>
+        </div>
+        <div class="panel-body">
+          {{ render(controller('TopxiaAdminBundle:Default:courseReview')) }}
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-default search-panel panel-420">
+        <div class="panel-heading">
+          <a href="" class="pull-right">{{ '更多'|trans }}</a>
+          <h3 class="panel-title">
+            {{ '热门搜索'|trans }}
+            <small>{{ '最近7天'|trans }}</small>
+          </h3>
+        </div>
+        <div class="panel-body">
+          {% if not setting('cloud_search.search_enabled') %}
             <div class="empty">
-              {% if not setting('cloud_search.search_enabled') %}
-                <span>即将上线，敬请期待 </span>
-              {% else %}
-                <a target="_blank" href="{{ path('admin_edu_cloud_search') }}">免费接入云搜索获取热门搜索关键词</a>
-              {% endif %}
+              <a target="_blank" href="{{ path('admin_edu_cloud_search') }}">免费接入云搜索获取热门搜索关键词</a>
             </div>
-          </div>
+          {% else %}
+            {{ render(controller('TopxiaAdminBundle:Default:cloudSearchRanking')) }}
+          {% endif %}
         </div>
       </div>
     </div>
+  </div>
 {% endblock %}
