--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -28,7 +28,7 @@
   <div class="panel panel-default">
     <div class="panel-heading clearfix">
       <h3 class="panel-title">
-        {{ '网站概览'|trans }}
+        {{ '今日数据'|trans }}
       </h3>
     </div>
     <div class="panel-body" id="site-overview-table" data-url="{{ path('admin_operation_analysis') }}">
