--- a/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
@@ -28,9 +28,9 @@
     </li>
   {% endif %}
   <li>
-    <div class="title">{{ '回答未回复'|trans }}</div>
+    <div class="title">{{ '未回复回答'|trans }}</div>
     <span class="number">
-      {{ todayThreadNum }}/{{ todayThreadUnAnswerNum }}
+      {{ todayThreadNum }}
     </span>
     <p>{{ '总数'|trans }}: {{ totalThreadNum }}</p>
   </li>
