--- a/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
@@ -30,7 +30,7 @@
   <li>
     <div class="title">{{ '未回复回答'|trans }}</div>
     <span class="number">
-      {{ todayThreadNum }}
+      {{ todayThreadUnAnswerNum }}
     </span>
     <p>{{ '总数'|trans }}: {{ totalThreadNum }}</p>
   </li>
