--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
 {% block container %}
   {# 域名检查提示#}
   {{ render(controller('TopxiaAdminBundle:Default:validateDomain')) }}
-
+{{ dump(setting('copyright.thirdCopyright')) }}
   <div class="row">
     {% if not (setting('copyright.thirdCopyright')|default(0) == 1) %}
       {{ render(controller('TopxiaAdminBundle:Default:getCloudNotices')) }}
@@ -192,7 +192,7 @@
     <div class="col-md-4">
       <div class="panel panel-default search-panel panel-420">
         <div class="panel-heading">
-          <a href="" class="pull-right">{{ '更多'|trans }}</a>
+         {# <a href="" class="pull-right">{{ '更多'|trans }}</a>#}
           <h3 class="panel-title">
             {{ '热门搜索'|trans }}
             <small>{{ '最近7天'|trans }}</small>
