云平台数据

--- a/src/Topxia/AdminBundle/Resources/views/Default/cloud-search-ranking.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/cloud-search-ranking.html.twig
@@ -9,95 +9,20 @@
   </tr>
   </thead>
   <tbody>
-  <tr>
-    <td>
-      <a class="link-primary" href="">Edusoho安装教程</a>
-    </td>
-    <td class="text-middle">
-      <div class="search-count js-cloud-search" data-count="30"></div>
-    </td>
-    <td>30</td>
-  </tr>
-  <tr>
-    <td>
-      <a class="link-primary" href="">Edusoho安装教程</a>
-    </td>
-    <td class="text-middle">
-      <div class="search-count js-cloud-search" data-count="20"></div>
-    </td>
-    <td>20</td>
-  </tr>
-  <tr>
-    <td class="text-middle">
-      <a class="link-primary" href="">Edusoho安装教程</a>
-    </td>
-    <td>
-      <div class="search-count js-cloud-search" data-count="13"></div>
-    </td>
-    <td>13</td>
-  </tr>
-  <tr>
-    <td>
-      <a class="link-primary" href="">Edusoho安装教程</a>
-    </td>
-    <td class="text-middle">
-      <div class="search-count js-cloud-search" data-count="10"></div>
-    </td>
-    <td>10</td>
-  </tr>
-  <tr>
-    <td>
-      <a class="link-primary" href="">Edusoho安装教程</a>
-    </td>
-    <td class="text-middle">
-      <div class="search-count js-cloud-search" data-count="10"></div>
-    </td>
-    <td>10</td>
-  </tr>
-  <tr>
-    <td>
-      <a class="link-primary" href="">Edusoho安装教程</a>
-    </td>
-    <td class="text-middle">
-      <div class="search-count js-cloud-search" data-count="10"></div>
-    </td>
-    <td>10</td>
-  </tr>
-  <tr>
-    <td>
-      <a class="link-primary" href="">Edusoho安装教程</a>
-    </td>
-    <td class="text-middle">
-      <div class="search-count js-cloud-search" data-count="8"></div>
-    </td>
-    <td>8</td>
-  </tr>
-  <tr>
-    <td>
-      <a class="link-primary" href="">Edusoho安装教程</a>
-    </td>
-    <td class="text-middle">
-      <div class="search-count js-cloud-search" data-count="8"></div>
-    </td>
-    <td>8</td>
-  </tr>
-  <tr>
-    <td>
-      <a class="link-primary" href="">Edusoho安装教程</a>
-    </td>
-    <td class="text-middle">
-      <div class="search-count js-cloud-search" data-count="6"></div>
-    </td>
-    <td>6</td>
-  </tr>
-  <tr>
-    <td>
-      <a class="link-primary" href="">Edusoho安装教程</a>
-    </td>
-    <td class="text-middle">
-      <div class="search-count js-cloud-search" data-count="4"></div>
-    </td>
-    <td>4</td>
-  </tr>
+  {% for  searchRanking in searchRankings %}
+    {% if searchRanking.words %}
+      <tr>
+        <td>
+          <a class="link-primary" href="">{{ searchRanking.words }}</a>
+        </td>
+        <td class="text-middle">
+          <div class="search-count js-cloud-search" data-count="{{ searchRanking.amount }}"></div>
+        </td>
+        <td>{{ searchRanking.amount }}</td>
+      </tr>
+    {% endif %}
+  {% else %}
+    <div class="empty">暂无搜索数据</div>
+  {% endfor %}
   </tbody>
 </table>
