--- a/src/Topxia/WebBundle/Resources/views/CourseMaterialManage/file-chooser.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseMaterialManage/file-chooser.html.twig
@@ -240,7 +240,7 @@
       
       <div class="tab-pane" id="file-chooser-browser-pane">
         <div id="file-browser" data-role="file-browser"
-          data-base-url="{{ path('uploadfile_browser') }}"
+          data-base-url="{{ path('uploadfile_browser', {source:'upload'}) }}"
           data-default-url="{{ path('uploadfile_browser', {source:'upload'}) }}"
           data-my-sharing-contacts-url="{{ path('material_lib_my_sharing_contacts') }}"
          data-empty="{{'暂无文件，请先上传。'|trans}}">
