--- a/src/Topxia/AdminBundle/Resources/public/css/admin.css
+++ b/src/Topxia/AdminBundle/Resources/public/css/admin.css
@@ -269,11 +269,32 @@ input.LargeInput {width: 600px;}
   height: 420px;
 }
 
+.color-gray {
+  color: #999;
+}
+
 .search-count {
  height: 10px;
  background: #428bca;
  border-radius: 2px;
  float: right;
+}
+
+.tata-popover {
+  max-width: 370px;
+  width: 370px;
+  color: #666;
+  font-size: 12px;
+}
+
+.tata-popover .popover-item + .popover-item {
+  margin-top: 15px;
+}
+
+.tata-popover .popover-item .title {
+  margin-bottom: 5px;
+  color: #333;
+  font-size: 14px;
 }
 
 .subfield-list {
