--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/my-cloud.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/my-cloud.html.twig
@@ -20,7 +20,7 @@
 
       <div class="panel panel-default notice-panel">
         <div class="panel-body">
-          <i class="es-icon es-icon-infooutline text-danger"></i>
+          <i class="es-icon es-icon-warning text-danger"></i>
           <div class="text-md mbl">您的教育云服务已被禁用</div>
           <div class="color-gray notice-desc">若有疑问，请联系客服人员：0571-86819929</div>
         </div>
@@ -69,20 +69,20 @@
                   </div>
                   <div class="col-md-4">
                     <a href="" class="my-products-item">
-                      <i class="es-icon es-icon-playcircleoutline"></i>
-                      云视频
+                      <i class="es-icon es-icon-zhibokecheng"></i>
+                      云直播
                     </a>
                   </div>
                   <div class="col-md-4">
                     <a href="" class="my-products-item">
-                      <i class="es-icon es-icon-playcircleoutline"></i>
-                      云视频
+                      <i class="es-icon es-icon-textsms"></i>
+                      云短信
                     </a>
                   </div>
                   <div class="col-md-4">
                     <a href="" class="my-products-item">
-                      <i class="es-icon es-icon-playcircleoutline"></i>
-                      云视频
+                      <i class="es-icon es-icon-search"></i>
+                      云搜索
                     </a>
                   </div>
                 </div>
@@ -102,20 +102,20 @@
                   </div>
                   <div class="col-md-4">
                     <a href="" class="my-products-item">
-                      <i class="es-icon es-icon-playcircleoutline"></i>
-                      云视频
+                      <i class="es-icon es-icon-zhibokecheng"></i>
+                      云直播
                     </a>
                   </div>
                   <div class="col-md-4">
                     <a href="" class="my-products-item">
-                      <i class="es-icon es-icon-playcircleoutline"></i>
-                      云视频
+                      <i class="es-icon es-icon-textsms"></i>
+                      云短信
                     </a>
                   </div>
                   <div class="col-md-4">
                     <a href="" class="my-products-item">
-                      <i class="es-icon es-icon-playcircleoutline"></i>
-                      云视频
+                      <i class="es-icon es-icon-search"></i>
+                      云搜索
                     </a>
                   </div>
                 </div>
