--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/sms.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/sms.html.twig
@@ -869,7 +869,7 @@
 <div class="page-heading">
   模版设置
 </div>
-<div class="table-responsive striped-table"> 
+<div class="table-responsive sms-table"> 
     <table class="table table-striped table-hover ">
       <thead>
         <tr>
