--- a/web/assets/v2/less/admin/educloud.less
+++ b/web/assets/v2/less/admin/educloud.less
@@ -141,3 +141,32 @@ a,a:hover {
     }
   }
 }
+
+// 云短信表格
+.sms-table {
+  color: @gray;
+  tbody>tr>td:nth-child(3) {
+    color: #999999;
+  }
+}
+
+//视频片头
+.head-leader-edit {
+  .file-name {
+    display: inline-block;
+    padding: 10px;
+    margin-top: 10px;
+    color: @gray;
+    border:1px solid #dddddd;
+    background-color: #fafafa
+  }
+}
+
+//进度条
+.cloud-progress {
+  border-radius: 10px;
+  height: 16px;
+  .progress-bar {
+    border-radius: 10px;
+  }
+}
