add js css support http

--- a/src/Topxia/WebBundle/Resources/views/script_boot_webpack.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/script_boot_webpack.html.twig
@@ -43,7 +43,4 @@
 <script src="{{ cdnUrl }}{{ asset('bundles/bazingajstranslation/js/translator.min.js') }}"></script>
 <script src="{{ url('bazinga_jstranslation_js') }}"></script>
 
-{% for path in script()  %}
-  <script src="{{ asset('build/' ~ path, 'webpack') }}"></script>
-{% endfor %}
-
+{% include 'TopxiaWebBundle::js_loader.html.twig' %}
