--- a/src/Topxia/WebBundle/Resources/views/layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/layout.html.twig
@@ -32,9 +32,7 @@
     {% include 'TopxiaWebBundle:Default:stylesheet.html.twig' with {config: currentTheme, isEditColor: isEditColor|default(false)} %}
 
     {# webpack #}
-    {% for path in css() %}
-      <link href="{{ asset('build/' ~ path, 'webpack') }}" rel="stylesheet" />
-    {% endfor %}
+    {% include 'TopxiaWebBundle::css_loader.html.twig' %}
 
   {% endblock %}
 
@@ -92,7 +90,7 @@
   <div id="attachment-modal" class="modal"></div>
 {% endblock %}
 
-{% if script() is empty %}
+{% if script() is empty or use_webapck_loader|default(false) == false %}
   {% include 'TopxiaWebBundle::script_boot.html.twig' with {script_main: asset('bundles/topxiaweb/js/app.js')} %}
 {% else %}
   {# webpack #}
