--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -52,7 +52,7 @@
           </div>
           <div class="popover-item">
             <div class="title">{{ '新增会员'|trans }}</div>
-            <div class="content">{{ '今日购买会员的人数，包括新购和续费'|trans }}</div>
+            <div class="content">{{ '今日购买会员的人数'|trans }}</div>
           </div>
           <div class="popover-item">
             <div class="title">{{ '未回复问答'|trans }}</div>
@@ -87,9 +87,17 @@
         </div>
       </div>
       <h3 class="panel-title">{{ '用户统计'|trans }}
-        <span class="glyphicon glyphicon-question-sign color-gray text-sm"
-              data-toggle="tooltip" data-placement="top"
-              title="{{ '活跃用户数：在30天内登录过系统的用户即为活跃用户; <br/>流失用户数：在30天内没有登录过系统的注册用户即为流失用户'|trans }}"></span>
+        <span data-toggle="popover" class="glyphicon glyphicon-question-sign color-gray text-sm js-data-popover"></span>
+        <div class="popover-content hidden">
+          <div class="popover-item">
+            <div class="title">{{ '活跃用户数'|trans }}</div>
+            <div class="content">{{ '在30天内登录过系统的用户即为活跃用户'|trans }}</div>
+          </div>
+          <div class="popover-item">
+            <div class="title">{{ '流失用户数'|trans }}</div>
+            <div class="content">{{ '在30天内没有登录过系统的注册用户即为流失用户'|trans }}</div>
+          </div>
+        </div>
       </h3>
     </div>
     <div class="panel-body js-statistic-areas" id="user-statistic"
@@ -116,9 +124,19 @@
             </div>
           </div>
           <h3 class="panel-title">{{ '订单统计'|trans }}
-            <span class="glyphicon glyphicon-question-sign color-gray text-sm"
-                  data-toggle="tooltip" data-placement="top"
-                  title="{{ '新增订单：平台当日产生的所有订单，包括免费和付费; <br/>付费订单：平台当日产生的金额大于0元的订单'|trans }}"></span></h3>
+            <span data-toggle="popover"
+                  class="glyphicon glyphicon-question-sign color-gray text-sm js-data-popover"></span>
+            <div class="popover-content hidden">
+              <div class="popover-item">
+                <div class="title">{{ '新增订单'|trans }}</div>
+                <div class="content">{{ '平台当日产生的所有订单，包括免费和付费'|trans }}</div>
+              </div>
+              <div class="popover-item">
+                <div class="title">{{ '付费订单'|trans }}</div>
+                <div class="content">{{ '平台当日产生的金额大于0元的订单'|trans }}</div>
+              </div>
+            </div>
+          </h3>
         </div>
         <div class="panel-body js-statistic-areas" id="study-count-statistic"
              data-url="{{ path('admin_study_statistic', {period: 'week'}) }}" style="height:320px;">
@@ -166,9 +184,15 @@
             </div>
           </div>
           <h3 class="panel-title">{{ '课时完成数'|trans }}
-            <span class="glyphicon glyphicon-question-sign color-gray text-sm"
-                  data-toggle="tooltip" data-placement="top"
-                  title="{{ '每天课时学习的完成数量'|trans }}"></span></h3>
+            <span data-toggle="popover"
+                  class="glyphicon glyphicon-question-sign color-gray text-sm js-data-popover"></span>
+            <div class="popover-content hidden">
+              <div class="popover-item">
+                <div class="title">课时完成数</div>
+                <div class="content">{{ '点击"学过了"的课时数量'|trans }}</div>
+              </div>
+            </div>
+          </h3>
         </div>
         <div class="panel-body js-statistic-areas" id="study-lesson-count-statistic"
              data-url="{{ path('admin_lesson_learn_statistic', {period: 'week'}) }}" style="height:360px;">
