--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -34,7 +34,7 @@
     <div class="panel-heading clearfix">
       <h3 class="panel-title">
         {{ '今日数据'|trans }} 
-        <span data-toggle="popover" class="glyphicon glyphicon-question-sign color-gray text-sm js-data-popover"></span>
+        <span data-toggle="popover" class="glyphicon glyphicon-question-sign color-gray text-sm js-taday-data-popover"></span>
         <div class="popover-content hidden">
           <div class="popover-item">
             <div class="title">{{'登录用户'|trans }}</div>
