--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -133,7 +133,7 @@
               </div>
               <div class="popover-item">
                 <div class="title">{{ '付费订单'|trans }}</div>
-                <div class="content">{{ '平台当日产生的金额大于0元的订单'|trans }}</div>
+                <div class="content">{{ '平台当日产生的订单价格大于0元的订单'|trans }}</div>
               </div>
             </div>
           </h3>
