--- a/web/assets/v2/less/admin/educloud.less
+++ b/web/assets/v2/less/admin/educloud.less
@@ -170,3 +170,39 @@ a,a:hover {
     border-radius: 10px;
   }
 }
+
+//未接入
+.cloud-banner-top {
+  position: relative;
+  .access-btn {
+    display: inline-block;
+    position: absolute;
+    right: 264px;
+    bottom: 70px;
+    padding: 12px 50px;
+    color: #fff;
+    border:1px solid #fff;
+    .es-transition;
+    &:hover {
+      background-color: #428af0;
+    }
+  }
+}
+.cloud-banner {
+  &.banner-bg-blue {
+    padding-left: 80px;
+    background-color: #F6F9FF;
+  }
+  &.banner-bg-gray {
+    padding-right: 100px;
+    background-color: #F5F5F5;
+  }
+  .title {
+    padding-top: 100px;
+    font-size: 26px;
+    font-weight: bold;
+  }
+  .subtitle {
+    font-size: 26px;
+  }
+}
