--- a/src/Topxia/AdminBundle/Resources/views/Default/system-status.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/system-status.html.twig
@@ -3,8 +3,9 @@
     <div class="title">系统版本</div>
     <div class="info">
       {% if mainAppUpgrade %}
-        <span class="glyphicon glyphicon-info-sign text-danger"></span>
-         <a class="text-lg link-underline text-danger" href="{{ path("admin_app_upgrades") }}">{{ mainAppUpgrade.package.fromVersion }} 更新</a>
+        <span class="glyphicon glyphicon-exclamation-sign text-danger"></span>
+        <span class="text-lg">{{ mainAppUpgrade.package.fromVersion }}</span>
+        <a class="text-lg link-underline text-danger" href="{{ path("admin_app_upgrades") }}"> 有更新</a>
       {% else %}
         <span class="glyphicon glyphicon-ok-sign text-success"></span>
         <span class="text-lg">{{ constant('Topxia\\System::VERSION') }}</span>
@@ -18,7 +19,7 @@
         <span class="glyphicon glyphicon-ok-sign text-success"></span>
         <span class="text-lg">已更新</span>
       {% else %}
-        <span class="glyphicon glyphicon-info-sign text-danger"></span>
+        <span class="glyphicon glyphicon-exclamation-sign text-danger"></span>
         <a class="text-lg link-underline text-danger" href="{{ path("admin_app_upgrades") }}"> {{ upgradeAppCount }} 个未更新</a>
       {% endif %}
     </div>
@@ -29,8 +30,8 @@
 
       <span class="status-card-warp">
         {% if   disabledCloudServiceCount > 0 %}
-          <span class="glyphicon glyphicon-info-sign text-danger"></span>
-          <span class="text-lg">{{ disabledCloudServiceCount }}个未开启</span>
+          <span class="glyphicon glyphicon-exclamation-sign text-danger"></span>
+          <a class="text-lg link-underline text-danger" href="{{path('admin_my_cloud_overview')}}">{{ disabledCloudServiceCount }}个未开启</a>
         {% else %}
           <span class="glyphicon glyphicon-ok-sign text-success"></span>
           <span class="text-lg">已开启</span>
@@ -89,7 +90,7 @@
         <span class="glyphicon glyphicon-ok-sign text-success"></span>
         <span class="text-lg">已开启</span>
       {% else %}
-        <span class="glyphicon glyphicon-info-sign text-danger"></span>
+        <span class="glyphicon glyphicon-exclamation-sign text-danger"></span>
         <a href="{{ path('admin_setting_mobile') }}" class="text-lg link-underline text-danger"> 未开启</a>
       {% endif %}
     </div>
