--- a/src/WebBundle/Resources/assets/less/task-manage/task-manage.less
+++ b/src/WebBundle/Resources/assets/less/task-manage/task-manage.less
@@ -1,21 +1,24 @@
 .task-manage-editor {
   .task-manage-type-list {
-    padding: 0;
+    padding: 0 45px;
+    margin-bottom: 15px;
+    list-style: none;
     .task-manage-type-item {
+      margin-bottom: 20px;
       >a {
         height: 150px;
-        background-color: #f5f6f8;
+        background-color: #f4f6f8;
         display: block;
         text-align: center;
         color: @gray;
         .es-transition;
         .border-radius(4px);
-        border: 1px solid #f5f6f8;
+        border: 3px solid #f4f6f8;
       }
       &:hover  {
         >a {
-          background: #f5f6f8;
-          border: 1px solid @brand-primary;
+          background: #f4f6f8;
+          border: 3px solid @brand-primary;
           .es-transition;
         }
       }
@@ -23,21 +26,29 @@
         >a {
           background: @brand-primary;
           color: #fff;
+          border: 3px solid @brand-primary;
           .es-transition;
         }
       }
       i {
         display: block;
-        font-size: 30px;
+        font-size: 40px;
+        line-height: 1;
         padding-top: 35px;
         margin-bottom: 10px;
       }
     }
   }
+  .es-step {
+    margin-bottom: 50px;
+  }
 }
 
 .task-manage-content-iframe {
-  min-height: 300px;
   width: 100%;
   border: none;
+}
+
+.task-iframe-body {
+  background-color: #fff;
 }
