--- a/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
+++ b/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
@@ -4,42 +4,13 @@
 {% block body %}
   <div class="tab-content" id="iframe-content">
     <div class="tab-pane js-course-tasks-pane active js-step2-view">
-      <ul class="es-step es-step-3 clearfix">
-        <li>
-          <span class="number">1</span>
-          选择教学手段
-        </li>
-        <li class="doing">
-          <span class="number">2</span>
-          设置内容
-        </li>
-        <li>
-          <span class="number">3</span>
-          设置完成条件
-        </li>
-      </ul>
-      <form id="step2-form">
+      <form class="form-horizontal" id="step2-form" >
         {% block activity_content %}
         {% endblock %}
       </form>
     </div>
-
     <div class="tab-pane js-course-tasks-pane js-step3-view">
-      <ul class="es-step es-step-3 clearfix">
-        <li>
-          <span class="number">1</span>
-          选择教学手段
-        </li>
-        <li>
-          <span class="number">2</span>
-          设置内容
-        </li>
-        <li class="doing">
-          <span class="number">3</span>
-          设置完成条件
-        </li>
-      </ul>
-      <form id="step3-form">
+      <form class="form-horizontal" id="step3-form" >
         {% block activity_finish %}
       {% endblock %}
       </form>
