--- a/src/WebBundle/Resources/views/TextActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/TextActivity/modal.html.twig
@@ -1,4 +1,5 @@
 {% extends 'WebBundle:Activity:activity-form-layout.html.twig' %}
+{% do css(['web.css']) %}
 {% do script(['web/activity-manage/text-activity-fields.js'], 300) %}
 
 {% block activity_content %}
@@ -20,13 +21,27 @@
   </div>
 {% endblock %}
 
-
 {% block activity_finish %}
   <div class="row form-group">
     <div class="col-xs-2 control-label">
-      <label for="condition">{{ '完成条件'|trans }}</label>
+      <label for="condition-select">{{ '完成条件'|trans }}</label>
     </div>
-    <div class="col-xs-9 controls">
-      <input id="condition" class="form-control" type="text" name="condition" value={{ activity.title|default('') }}></div>
+    <div class="col-xs-4 controls">
+      <select class="form-control" id="condition-select">
+        <option value="handle">点击"看过了"</option>
+        <option value="auto">至少x观看分钟</option>
+      </select>
+    </div>
+  </div>
+  <div class="row form-group hidden" id="condition-group">
+    <div class="col-xs-2 control-label">
+      <label for="condition-detail">{{ '至少观看'|trans }}</label>
+    </div>
+    <div class="col-xs-4 controls">
+      <input id="condition-detail" class="form-control" type="text" name="condition_detail" value="1">
+    </div>
+    <div class="col-xs-4 controls">
+      <p class="form-control-static">分钟</p>
+    </div>
   </div>
 {% endblock %}
