实现任务的删除

--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -19,7 +19,7 @@
 
 {% block title %}{{ '教学计划管理'|trans }} - {{ parent() }}{% endblock %}
 
-{% do script(['libs/vendor.js', 'web.js']) %}
+{% do script(['libs/vendor.js', 'web.js', 'web/task-manage/delete.js']) %}
 {% block main %}
 
   <div class="panel panel-default panel-col lesson-manage-panel">
